--- a/Tetris-V2/Dockerfile
+++ b/Tetris-V2/Dockerfile
@@ -1,23 +1,26 @@
-# Use the official Node.js 16 image as the base image
+# Use the official Node.js 18 image as the base image
 FROM node:18
 
 # Set the working directory inside the container
 WORKDIR /app
 
-# Copy package.json and package-lock.json (or yarn.lock) to the container
+# Copy only the package.json and package-lock.json first
 COPY package*.json ./
 
-# Install project dependencies
+# Install compatible postcss version (to fix build errors)
+RUN npm install postcss@7.0.39 --save-exact
+
+# Install remaining project dependencies
 RUN npm install
 
-# Copy the rest of the application code to the container
+# Copy the rest of the application source code
 COPY . .
 
 # Build the React app
 RUN npm run build
 
-# Expose the port that the app will run on (usually 3000 by default)
+# Expose the port that the app will run on
 EXPOSE 3000
 
-# Start the React app when the container starts
+# Start the React app
 CMD [ "npm", "start" ]
