--- a/Tetris-V2/package.json
+++ b/Tetris-V2/package.json
@@ -18,6 +18,7 @@
 		"react-toggle": "^4.1.1",
 		"react-use-gesture": "^7.0.5",
 		"styled-components": "5.0.1"
+                "postcss": "7.0.39"
 	},
 	"devDependencies": {
 		"gh-pages": "^2.2.0",
